# pm

./: .gitignore  .gitleaks.toml  ARBITRATION.md  CONTRIBUTING.md  Cargo.toml  GOAL.md  LICENSES.md  Makefile  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: contract.yml  oracle-reproducibility.yml  release-quality.yml  security.yml  ui.yml
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/binary-market/: Cargo.toml
contracts/binary-market/examples/: binary_market_schema.rs
contracts/binary-market/schema/: binary-market.json
contracts/binary-market/src/: contract.rs  error.rs  guards.rs  lib.rs  math.rs  msg.rs  question.rs  state.rs
contracts/binary-market/tests/: INVARIANT_COVERAGE.md  arbitration.rs  complete_sets.rs  fpmm_math.rs  lifecycle_assurance.rs  lp_redemption.rs  market_boundary.rs  query_event_solvency.rs  question_activation.rs  redemption.rs  resolution.rs  state_machine_model.rs  test_helpers.rs  trading.rs  wire_schema_golden.rs
contracts/binary-market/tests/fixtures/: question-python-jcs.json
contracts/cw-reality/: Cargo.toml  README.md  justfile
contracts/cw-reality/examples/: schema.rs
contracts/cw-reality/schema/: cw-reality.json
contracts/cw-reality/src/: contract.rs  error.rs  escalation.rs  execute.rs  filter.rs  hash.rs  id.rs  lib.rs  msg.rs  proptests.rs  query.rs  state.rs  tests.rs
contracts/cw-reality/src/execute/: answer.rs  arbitration.rs  ask.rs  claim.rs  fund_bounty.rs  receive.rs  withdraw.rs
contracts/market-factory/: Cargo.toml
contracts/market-factory/examples/: market_factory_schema.rs
contracts/market-factory/schema/: market-factory.json
contracts/market-factory/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/market-factory/tests/: factory.rs
contracts/pm-types/: Cargo.toml
contracts/pm-types/examples/: pm_types_schema.rs
contracts/pm-types/schema/: pm-types.json
contracts/pm-types/src/: lib.rs
contracts/pm-types/tests/: public_types.rs
depricated_ui/: UNSUPPORTED.md  pnpm-workspace.yaml
docs/: differences-from-reality-eth.md  reality-eth-lessons.md  reality-eth-reading-list.md  research-notes-bond-economics.md  research-notes-cw-prior-art.md  research-notes-reality-source.md  research-notes-v2v3-safesnap.md  self-audit-checklist.md
docs/juno-reality/: research-notes-v2v3-safesnap.md
docs/prediction-market/: README.md  architecture.md  authorization.json  cw-reality-compatibility.md  dao-dao-verdict-runbook.md  interface-discovery-policy.md  issue-2-decision-packet.md  juno-and-topology.md  lifecycle-assurance.md  mechanism.md  prior-art.md  product-legal-operations.md  question-specification.md  release-quality.md  review-checklist.md  security-and-economics.md  user-journeys.md
docs/prediction-market/adrs/: ADR-001-binary-fixed-expiry.md  ADR-002-fpmm.md  ADR-003-internal-positions.md  ADR-004-isolated-topology.md  ADR-005-native-ujuno.md  ADR-006-neutral-invalid.md  ADR-007-market-owned-question.md  ADR-008-oracle-tiers-and-caps.md  ADR-009-locked-initial-liquidity.md  ADR-010-fees-and-dust.md  ADR-011-permissionless-creation.md  ADR-012-no-admin-or-pause.md  ADR-013-resolution-liveness.md  ADR-014-answer-bytes-and-template.md  ADR-015-offchain-trust.md  ADR-016-product-posture.md  ADR-017-juno-governance-arbitration.md  ADR-018-challenge-bond.md  README.md
docs/prediction-market/evidence/: 2026-07-15-juno.md  2026-07-15-osmosis-juno-liquidity.md  oracle-wasm-reproducibility.md  source-baseline.md
docs/prediction-market/governance-rehearsal/: README.md  request.schema.json
docs/prediction-market/interface-policy/: interface-policy.schema.json
docs/prediction-market/interface-policy/fixtures/: invalid-secret-report.json  valid-policy.json
docs/prediction-market/oracle-deployment/: AUDIT-HANDOFF.md  README.md  evidence.schema.json  manifest.schema.json
quality/: gas-storage-report.json  thresholds.json
scripts/: check-schema.sh  check-ui-policy.sh  complete-first-q.sh  validate.sh
scripts/governance/: prepare_rehearsal.py
scripts/oracle/: build-reproducible.sh  collect-evidence.sh  prepare-frozen-instantiate.sh  prepare-smoke-test.sh  verify-deployment.py
scripts/quality/: verify-report.py
scripts/release/: build-release.sh  compare-builds.py  generate-metadata.py
scripts/unsafe/: README.md  complete-first-q.sh
tests/governance/: test_prepare_rehearsal.py
tests/oracle/: test_verify_deployment.py
tests/oracle/fixtures/: cw_reality.wasm  evidence-ok.json  evidence-wrong-admin.json  evidence-wrong-checksum.json  evidence-wrong-config.json  manifest.json
tests/policy/: test_interface_policy.py
tests/quality/: test_quality_report.py
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  format.ts  styles.css
ui/src/chain/: juno.ts  keplr.ts
ui/src/components/: StateChip.tsx  StateMachineTimeline.tsx  WalletBar.tsx
ui/src/contract/: client.ts  types.ts
ui/src/pages/: Ask.tsx  Feed.tsx  MyActivity.tsx  QuestionDetail.tsx
