[workspace]
members = ["binary-market", "cw-reality", "market-factory", "pm-types"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85.1"

[workspace.dependencies]
cosmwasm-schema = "1.5.4"
cosmwasm-std = { version = "1.5.4", features = ["ibc3", "cosmwasm_1_2"] }
cw-multi-test = { version = "0.20.1", features = ["cosmwasm_1_2"] }
cw-storage-plus = "1.1"
cw-utils = "1.0"
cw2 = "1.1"
cw20 = "1.1"
cw20-base = "1.1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
proptest = "1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false