[package]
name = "cw-reality"
authors = ["Juno AI <juno@junonetwork.io>"]
description = "Bond-escalating crowdsourced oracle for contested social facts (CosmWasm port of Reality.eth) — JunoReality v1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/JunoNetwork/junoreality"
version = "0.1.0-alpha.1"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
cw20.workspace = true
hex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

# cw-filter wire types are mirrored locally (see src/filter.rs). The cw-filter
# crate is not imported because its transitive `cw-jsonfilter` pulls in
# alloy-rpc-types-eth which conflicts with this workspace.

[dev-dependencies]
cw-multi-test.workspace = true
cw20-base.workspace = true
proptest.workspace = true
