[package]
name = "market-factory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
binary-market = { path = "../binary-market", features = ["library"] }
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-reality = { path = "../cw-reality", features = ["library"] }
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
pm-types = { path = "../pm-types" }
thiserror.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
